static/css/styles.css
/* CTA button */
.cta-button {
    display: inline-block;
    padding: 10px 20px;
    font-size: 1.2em;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #fff;
    background: linear-gradient(90deg, #3f5efb, #fc486b);
    border: none;
    border-radius: 50px;
    box-shadow: 0 10px 20px rgba(252, 70, 107, .3);
    transition: all .3s ease;
    text-decoration: none;
    position: relative;
    z-index: 2;
}

.cta-button:hover {
    transform: translateY(-3px);
    box-shadow: 0 15px 20px rgba(252, 70, 107, .4);
}

.cta-button:active {
    transform: translateY(1px);
    box-shadow: 0 5px 10px rgba(252, 70, 107, .4);
}

.full-access {
    display: inline-block;
    padding: 8px 16px;
    font-size: 1em;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: #fff;
    background: transparent;
    border: 2px solid rgba(255, 255, 255, .7);
    border-radius: 50px;
    transition: all .3s ease;
    text-decoration: none;
    margin: 0 auto;
    display: table;
}

.full-access:hover {
    background: #fff;
    color: #000;
}

/* Hero */
.custom-body {
    font-family: 'Montserrat', sans-serif;
    color: #fff;
    background: radial-gradient(circle at center, #121212, #000);
    overflow-x: hidden;
}

.custom-hero {
    position: relative;
}

.custom-h2 {
    font-size: 2em;
    letter-spacing: .3em;
}

.custom-h1 {
    font-size: 3em;
    letter-spacing: .3em;
    margin-bottom: 2em;
}

/* Nav */
.custom-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: 2px solid #fff;
    z-index: 3;
    box-shadow: 0 0 10px rgba(255, 255, 255, .5);
}

.custom-nav div:first-child {
    color: #fff;
    font-size: 1em;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
}

.custom-nav a {
    color: rgba(255, 255, 255, .6);
    font-family: 'Montserrat', sans-serif;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 1px;
    transition: color .3s ease;
    align-self: center;
}

.custom-nav a:hover {
    color: #fff;
}

.custom-nav a:last-child {
    display: inline-block;
    padding: 8px 16px;
    background: linear-gradient(90deg, #3f5efb, #fc486b);
    border: none;
    border-radius: 50px;
    box-shadow: 0 10px 20px rgba(252, 70, 107, .3);
    transition: all .3s ease;
    text-decoration: none;
}

.custom-nav a:last-child:hover {
    transform: translateY(-3px);
    box-shadow: 0 15px 20px rgba(252, 70, 107, .4);
}

.custom-nav a:last-child:active {
    transform: translateY(1px);
    box-shadow: 0 5px 10px rgba(252, 70, 107, .4);
}

#dropdown {
    flex-direction: column;
    gap: 1em;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #000;
    color: #fff;
    padding: 1em;
    align-items: center;
    justify-content: center;
}

#dropdown a {
    color: #fff;
    text-decoration: none;
    text-transform: uppercase;
}

#dropdown button {
    position: absolute;
    right: 1em;
    top: 1em;
}

/* Timeline */
.use-cases-section {
    position: relative;
    padding-bottom: 20px;
}

.timeline {
    position: relative;
    display: flex;
    justify-content: space-around;
    padding: 10px 0;
    list-style: none;
    text-align: center;
    counter-reset: item;
}

.timeline-item {
    counter-increment: item;
    padding: 20px;
    position: relative;
    width: 200px;
    transition: transform .3s ease, box-shadow .3s ease, opacity .3s ease, filter .3s ease;
    opacity: .6;
    filter: blur(2px);
    z-index: 1;
    height: auto;
}

.timeline-item:hover {
    opacity: 1;
    filter: none;
}

.timeline-item.active {
    opacity: 1;
    filter: blur(0);
}

.timeline-indicator {
    position: absolute;
    bottom: 20px;
    left: 0;
    width: 0;
    top: 220px;
    height: 4px;
    background: #fff;
    transition: width .3s ease;
}

.case-details {
    color: #fff;
}

.case-card {
    position: relative;
    top: 0;
    left: 50%;
    transform: translate(-50%);
    background-color: rgba(0, 0, 0, .8);
    color: #fff;
    border-radius: 15px;
    box-shadow: 0 0 20px rgba(255, 255, 255, .2);
    text-align: left;
    width: 420px;
    padding: 2em;
    transition: opacity .5s ease, transform .5s ease, box-shadow .5s ease;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    margin-top: 1em;
}

.case-card:hover {
    box-shadow: 0 0 30px rgba(255, 255, 255, .4);
}

.case-card.hidden {
    opacity: 0;
    transform: translate(-50%, 30px);
    pointer-events: none;
    display: none;
}

.case-card .fas {
    font-size: 5em;
    margin-bottom: 0;
}

.case-card .case-details {
    border-top: none;
    padding-top: 0;
    font-size: 1.5em;
    text-align: center;
}

.case-card .fas,
.case-card img {
    display: block;
    margin: 0 auto;
    font-size: 14em;
    max-width: 100%;
    height: auto;
}

.case-content {
    display: flex;
    align-items: center;
    gap: 20px;
}

.icon-container {
    border-right: 1px solid #fff;
    padding-right: 20px;
    flex: 1;
    display: flex;
    justify-content: center;
}

.text-container {
    flex: 1;
}

/* Use Cases */
.document-understanding-use-case-section {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 40px;
    justify-items: center;
    margin: 40px auto;
    max-width: 800px;
}

.document-understanding-case-card {
    position: relative;
    background-color: rgba(0, 0, 0, .8);
    color: #fff;
    border-radius: 15px;
    box-shadow: 0 0 20px rgba(255, 255, 255, .2);
    text-align: left;
    width: 100%;
    padding: 40px;
    transition: transform .5s ease;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    background-image: linear-gradient(to right, rgba(0, 0, 0, .8), rgba(25, 25, 25, .8));
}

.document-understanding-case-card:hover {
    transform: scale(1.05);
    box-shadow: 0 0 40px rgba(255, 255, 255, .4);
}
/* ... */

